1999-12-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/bddemo.m: Make it more likely to work with
	whitespace_in_literal_matrix = "ignore".
	* control/analdemo.m: Ditto.
	* control/dgkfdemo.m: Ditto.
	* control/frdemo.m: Ditto.
	* control/sysrepdemo.m: Ditto.
	* control/moddemo.m: Ditto.
	* control/zp2tf.m: Ditto.

	* control/dezero.m: Use toascii to convert string to ASCII value
	instead of multiplying it by 1.

	* control/zp2sys.m: Don't save and restore implicit_str_to_num_ok.
	* control/zpout.m: Ditto.
	* control/tfout.m: Ditto.
	* control/tf2sys.m: Ditto.
	* control/syssub.m: Ditto.
	* control/syssetsignals.m: Ditto.
	* control/sysout.m: Ditto.
	* control/sysmult.m: Ditto.
	* control/sysgroup.m: Ditto.
	* control/sysdup.m: Ditto.
	* control/sysdisc.m: Ditto.
	* control/syscont.m: Ditto.
	* control/sysconnect.m: Ditto.
	* control/sysappend.m: Ditto.
	* control/sysadd.m: Ditto.
	* control/ss2sys.m: Ditto.
	* control/nyquist.m: Ditto.
	* control/lqg.m: Ditto.
	* control/fir2sys.m: Ditto.
	* control/dmr2d.m: Ditto.
	* control/dezero.m: Ditto.
	* control/d2c.m: Ditto.
	* control/c2d.m: Ditto.
	* control/bddemo.m: Ditto.
	* control/pzmap.m: Ditto.

1999-12-08  Daniel Calvelo <dcalvelo@pharion.univ-lille2.fr>

	* signal/spectral_adf.m: Fix typo.

1999-11-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cond.m: Texinfoize doc string.
	* linear-algebra/kron.m: Ditto.
	* linear-algebra/norm.m: Ditto.
	* linear-algebra/null.m: Ditto.
	* linear-algebra/orth.m: Ditto.
	* linear-algebra/rank.m: Ditto.
	* linear-algebra/trace.m: Ditto.
	* linear-algebra/qzhess.m: Ditto.
	* miscellaneous/menu.m: Ditto.
	* general/perror.m: Ditto.
	* general/strerror.m: Ditto.
	* general/columns.m: Ditto.
	* general/rows.m: Ditto.
	* image/colormap.m: Ditto.
	* image/gray.m: Ditto.
	* image/gray2ind.m: Ditto.
	* image/image.m: Ditto.
	* image/imagesc.m: Ditto.
	* image/imshow.m: Ditto.
	* image/ind2gray.m: Ditto.
	* image/ind2rgb.m: Ditto.
	* image/loadimage.m: Ditto.