@@ -100,7 +100,7 @@ function sys = syssub (...)
     eyin = eye(mg);
     eyout = eye(pg);
   
-    sys = sysscale(sys,[eyout -eyout],[eyin;eyin],Gout,Gin);
+    sys = sysscale (sys, [eyout, -eyout], [eyin; eyin], Gout, Gin);
   
   else
     ## multiple systems (or a single system); combine together one by one
